--- a/example/vue3/package.json
+++ b/example/vue3/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "vue": "^3.2.37",
-    "vue-router": "^4.1.2"
+    "vue-router": "^4.1.2",
+    "vue3-use-hooks": "^0.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
