--- a/example/vue3/tsconfig.json
+++ b/example/vue3/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "Node",
     "strict": true,
     "jsx": "preserve",
+    "strictNullChecks": false,
     "sourceMap": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
