--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,10 @@
     "skipLibCheck": true,
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "exclude": [
+    "dist",
+    "node_modules",
+    "tests"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
