--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-use-hooks",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "vue3 use hooks",
   "author": "Abdulnasır OLCAN",
   "license": "MIT",
@@ -42,6 +42,7 @@
     "vue-use-hooks",
     "vue-composable",
     "vue3-composable",
+    "composable",
     "use-hooks",
     "vue-hooks",
     "vue3-hooks"
