--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "prepublish": "yarn build",
+    "prepublish": "pnpm build",
     "test": "vitest run",
     "test:CI": "vitest --watch=false",
     "coverage": "vitest run --coverage"
@@ -45,7 +45,12 @@
     "composable",
     "use-hooks",
     "vue-hooks",
-    "vue3-hooks"
+    "vue3-hooks",
+    "useEmbed",
+    "useState",
+    "useLocalStorage",
+    "useModal",
+    "useStringCase"
   ],
   "files": [
     "dist/*.js",
